moved auth0 stuff to properties controller
